terraform-shared/modules/base-vpc/11-sg.tf
resource "aws_security_group" "ssh" {
  name        = "${var.prefix}-ssh-sg"

  description = "Allow SSH inbound traffic"
  vpc_id      = aws_vpc.base.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.prefix}-ssh-sg"
  }
}
